force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <description>Primary object to store films and programs. Includes hierarchical relationship to relate films and programs together.</description>
    <label>Feature</label>
    <nameField>
        <label>Feature  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>