force-app/main/default/objects/Feature__c/fields/Closed_Caption__c.field-meta.xml
<CustomField>
    <fullName>Closed_Caption__c</fullName>
    <label>Closed Caption</label>
    <type>Picklist</type>
<valueSet>
    <restricted>true</restricted>
    <valueSetName>Yes_No</valueSetName>
</valueSet>
</CustomField>