force-app/main/default/objects/Feature__c/fields/Descriptive_Audio__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Audio__c</fullName>
    <label>Descriptive Audio</label>
    <type>Picklist</type>
<valueSet>
    <restricted>true</restricted>
    <valueSetName>Yes_No</valueSetName>
</valueSet>
</CustomField>