force-app/main/default/objects/Feature__c/fields/Film_Festival_History__c.field-meta.xml
<CustomField>
    <fullName>Film_Festival_History__c</fullName>
    <label>Film Festival History</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>