force-app/main/default/objects/Feature__c/fields/Film_Materials_Website__c.field-meta.xml
<CustomField>
    <fullName>Film_Materials_Website__c</fullName>
    <label>Film Materials Website</label>
    <type>Url</type>
</CustomField>