force-app/main/default/objects/Feature__c/fields/Film_Still__c.field-meta.xml
<CustomField>
    <fullName>Film_Still__c</fullName>
    <label>Film Still</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>