force-app/main/default/objects/Feature__c/fields/Film_Title_Original_Language__c.field-meta.xml
<CustomField>
    <fullName>Film_Title_Original_Language__c</fullName>
    <label>Film Title Original Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>