force-app/main/default/objects/Feature__c/fields/Film_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Film_Trailer__c</fullName>
    <label>Film Trailer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>