force-app/main/default/objects/Feature__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blu-Ray</fullName>
            </value>
            <value>
                <fullName>DCP</fullName>
            </value>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>35mm</fullName>
            </value>
            <value>
                <fullName>Hi-Res / HD file</fullName>
            </value>
            <value>
                <fullName>Streaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>