force-app/main/default/objects/Feature__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Documentary US</fullName>
            </value>
            <value>
                <fullName>Documentary Foreign</fullName>
            </value>
            <value>
                <fullName>Animated US</fullName>
            </value>
            <value>
                <fullName>Animated Foreign</fullName>
            </value>
            <value>
                <fullName>Dramatic US</fullName>
            </value>
            <value>
                <fullName>Dramatic Foreign</fullName>
            </value>
            <value>
                <fullName>Shorts Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>