force-app/main/default/objects/Feature__c/fields/Impact_Partner_Film__c.field-meta.xml
<CustomField>
    <fullName>Impact_Partner_Film__c</fullName>
    <label>Impact Partner Film</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>