force-app/main/default/objects/Feature__c/fields/In_Your_Classroom_Program__c.field-meta.xml
<CustomField>
    <fullName>In_Your_Classroom_Program__c</fullName>
    <label>In Your Classroom Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind the Animation</fullName>
            </value>
            <value>
                <fullName>Real to Reel</fullName>
            </value>
            <value>
                <fullName>Moving Stories: AR VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>