force-app/main/default/objects/Feature__c/fields/Official_Facebook_Profile__c.field-meta.xml
<CustomField>
    <fullName>Official_Facebook_Profile__c</fullName>
    <label>Official Facebook Profile</label>
    <type>Url</type>
</CustomField>