force-app/main/default/objects/Feature__c/fields/Official_IMDB_Page__c.field-meta.xml
<CustomField>
    <fullName>Official_IMDB_Page__c</fullName>
    <label>Official IMDB Page</label>
    <type>Url</type>
</CustomField>