force-app/main/default/objects/Feature__c/fields/Official_Instagram_Profile__c.field-meta.xml
<CustomField>
    <fullName>Official_Instagram_Profile__c</fullName>
    <label>Official Instagram Profile</label>
    <type>Url</type>
</CustomField>