force-app/main/default/objects/Feature__c/fields/Official_Twitter_Profile__c.field-meta.xml
<CustomField>
    <fullName>Official_Twitter_Profile__c</fullName>
    <label>Official Twitter Profile</label>
    <type>Url</type>
</CustomField>