force-app/main/default/objects/Feature__c/fields/Official_Website__c.field-meta.xml
<CustomField>
    <fullName>Official_Website__c</fullName>
    <label>Official Website</label>
    <type>Url</type>
</CustomField>