force-app/main/default/objects/Feature__c/fields/One_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>One_Line_Description__c</fullName>
    <label>One Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>