force-app/main/default/objects/Feature__c/fields/Premiere_Status__c.field-meta.xml
<CustomField>
    <fullName>Premiere_Status__c</fullName>
    <label>Premiere Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>