force-app/main/default/objects/Feature__c/fields/Programming_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Programming_Recommendation__c</fullName>
    <inlineHelpText>Why did we program this film?</inlineHelpText>
    <label>Programming Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>