force-app/main/default/objects/Feature__c/fields/Screener_Link__c.field-meta.xml
<CustomField>
    <fullName>Screener_Link__c</fullName>
    <label>Screener Link</label>
    <type>Url</type>
</CustomField>