force-app/main/default/objects/Feature__c/fields/Screener_Notes__c.field-meta.xml
<CustomField>
    <fullName>Screener_Notes__c</fullName>
    <label>Screener Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>