force-app/main/default/objects/Feature__c/fields/Screener_OK_to_Press__c.field-meta.xml
<CustomField>
    <fullName>Screener_OK_to_Press__c</fullName>
    <label>Screener OK to Press</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>