force-app/main/default/objects/Feature__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>