force-app/main/default/objects/Feature__c/fields/Short_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Short_Synopsis__c</fullName>
    <label>Short Synopsis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>