force-app/main/default/objects/Feature__c/fields/Sundance_Played__c.field-meta.xml
<CustomField>
    <fullName>Sundance_Played__c</fullName>
    <description>Played at the Sundance Film Festival</description>
    <inlineHelpText>Played at the Sundance Film Festival</inlineHelpText>
    <label>Played Sundance Film Festival</label>
    <type>Picklist</type>
<valueSet>
    <restricted>true</restricted>
    <valueSetName>Yes_No</valueSetName>
</valueSet>
</CustomField>