force-app/main/default/objects/Feature__c/fields/Sundance_Supported__c.field-meta.xml
<CustomField>
    <fullName>Sundance_Supported__c</fullName>
    <description>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</description>
    <inlineHelpText>Was this film/project supported by a lab, grant, etc from Sundance? Find out by searching for it here: http://history.sundance.org/</inlineHelpText>
    <label>Supported by Sundance Institute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>