force-app/main/default/objects/Feature__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>