force-app/main/default/objects/Feature__c/fields/Theatrical_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Theatrical_Release_Date__c</fullName>
    <label>Theatrical Release Date</label>
    <type>Date</type>
</CustomField>