force-app/main/default/objects/Feature__c/recordTypes/Film.recordType-meta.xml
<RecordType>
    <fullName>Film</fullName>
    <active>true</active>
    <label>Film</label>
</RecordType>